# rust-bittorrent-client

./: .gitignore  Cargo.toml  README.md  README.txt  _config.yml
.cargo/: config.toml
.devcontainer/: devcontainer.json
_drafts/: 2025-05-18-kick-starting.md  2025-12-05-ratatui-ui.md  2026-05-06-going-async-1.md  background-tasks-ratatui.excalidraw  bt-client-ui.excalidraw  client-components.excalidraw  file-downloader-0.0.8.excalidraw  handshake-message.excalidraw  interactive-app-loop.excalidraw  peer-message-format.excalidraw  piece-downloader.excalidraw
_includes/: head.html  header.html
_layouts/: home.html
_pages/: index.md
_posts/: 2025-05-17-project-idea.md  2025-06-13-bittorent-overview.md  2025-06-13-bittorrent-overview.md  2025-06-14-obtain-announce-url.md  2025-06-16-make-http-request.md  2025-06-19-obtaining-the-list-of-peers.md  2025-06-19-passing-correct-info-hash.md  2025-06-25-parsing-the-peer-list.md  2025-06-26-intermediate-reflection.md  2025-07-11-handshake-with-peers.md  2025-07-17-downloading-file-block.md  2025-07-19-download-the-whole-piece.md  2025-07-23-download-the-whole-file.md  2025-07-25-improve-download-speed.md  2025-07-30-implement-request-pipeline.md  2025-08-05-refactor-probing-peers.md  2025-11-20-discovering-serde.md  2025-11-29-better-logging-with-tracing.md  2025-12-27-starting-with-ratatui.md  2026-01-12-background-tasks-ratatui.md  2026-01-24-error-handling-background-tasks.md  2026-02-01-connecting-ui.md  2026-02-14-first-integration-test.md  2026-02-20-connect-to-peers-in-parallel.md  2026-05-06-going-async.md  (+3 more)
(+97 files in other folders)
