[package]
name = "bt_client"
version = "0.0.1"
edition = "2024"
default-run = "main"

[dependencies]
reqwest = { version = "0.12.20", features = ["blocking"] }
url = "2.5.4"
sha1 = "0.10.6"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.19"
